tests/ui/imports/import-after-macro-expand-12.stderr
error: `B` is ambiguous
  --> $DIR/import-after-macro-expand-12.rs:27:9
   |
LL |         B::ASSOC
   |         ^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `B` could refer to the enum imported here
  --> $DIR/import-after-macro-expand-12.rs:26:13
   |
LL |         use self::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `B` to disambiguate
note: `B` could also refer to the enum imported here
  --> $DIR/import-after-macro-expand-12.rs:26:13
   |
LL |         use self::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `B` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `B` is ambiguous
  --> $DIR/import-after-macro-expand-12.rs:27:9
   |
LL |         B::ASSOC
   |         ^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `B` could refer to the enum imported here
  --> $DIR/import-after-macro-expand-12.rs:26:13
   |
LL |         use self::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `B` to disambiguate
note: `B` could also refer to the enum imported here
  --> $DIR/import-after-macro-expand-12.rs:26:13
   |
LL |         use self::*;
   |             ^^^^^^^
   = help: consider adding an explicit import of `B` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

